@@ -1,3 +1,8 @@
+2017-08-01  Dominique d'Humieres  <dominiq@lps.ens.fr>
+
+	PR testsuite/53542
+	* gfortran.dg/use_30.f90: New test.
+
 2017-08-01  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/81588
